objects/Venue__c.object
<CustomObject>
    <description>Details of venues for Events</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_formatted__c</fullName>
        <formula>SUBSTITUTE( Address__c ,SUBSTITUTE($Label.linebreak, &quot;-&quot;, &quot;&quot;),&quot;&lt;br/&gt;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address (formatted)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact__c</fullName>
        <label>Alternate Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <description>Alternate Venue Email Address</description>
        <inlineHelpText>Alternate Venue Email Address</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Cities_For_Events</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries_For_Events</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Venue Email Address</description>
        <inlineHelpText>Venue Email Address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Kiosk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kiosk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <label>Map</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Venue</label>
    <listViews>
        <fullName>All_Venues</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Venues</label>
    </listViews>
    <listViews>
        <fullName>Johannesburg_Venues</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>City__c</field>
            <operation>equals</operation>
            <value>Johannesburg</value>
        </filters>
        <label>Johannesburg Venues</label>
    </listViews>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>